sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:7: error: not found: value lgr
    for(i<- 0 to lgr-2){
                 ^AlgBubbleSort1:16: error: type mismatch;
 found   : Unit
 required: Boolean
    if(c=0){
        ^